fixtures/parser/invalid/04-token-paren.fl
component MissingTokenParen {
  surface {
    fill: token color.surface.default)
  }
}
